# treepo

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  inventory.yaml  migration_inventory.yaml  pyproject.toml
.claude/skills/minimal-package-pass/: SKILL.md
.github/workflows/: ci.yml
config/: settings.example.yaml
configs/cld/: fno_smoke.toml  hll_sketch.toml  lda_oracle.toml  lda_recovery_smoke.toml  manifesto_fg_compile.toml  markov_oracle.toml  markov_probe.toml
configs/research/methods/: fno_smoke.toml  hll_sketch.toml  lda_oracle.toml  lda_recovery_smoke.toml  manifesto_fg_compile.toml  markov_oracle.toml  markov_probe.toml
docs/: antipatterns.md  architecture.md  boundary.md  bundle_contract.md  cleanup_handoff_2026_07_01.md  evidence.md  evidence_unification_plan.md  internal_streamline_plan_2026_07_01.md  llm_guide.md  methods_module_layout.md  package_minimization_status.md  preference_data.md  results_schema.md  training_defaults.md  tree_and_sampling.md  visualization.md
docs/prepush_review/: 00_index.md  01_release_blockers.md  02_lean_adherence.md  03_defaults_public_api_release_gate.md  04_streamlining_and_duplication.md  05_execution_roadmap.md
examples/: README.md  cardinality_recovery.yaml  runtime_all_methods.yaml  runtime_embedding_retrieval.yaml  runtime_fno_state_model.yaml  runtime_llm_full_context.yaml  runtime_summary_tree.yaml
examples/bench/: classical_sketches.yaml  markov.yaml
examples/cld/: README.md  run_fno_family.py  run_hll_sketch.py  run_lda_oracle.py  run_lda_recovery.py  run_manifesto_fg_compile.py  run_markov_oracle.py  run_markov_probe.py
examples/methods/: README.md  fno_markov.toml  hll_sketch.toml  manifesto_bundle.toml  manifesto_end_to_end.toml  manifesto_replications.toml  manifesto_reward_mechanisms.toml  neural_operator_lda.toml  neural_operator_lda_leaf_grid.toml  neural_operator_markov_compare.toml  neural_operator_markov_leaf_grid.toml  run_finetune_views.py  run_fno_markov.py  run_hll_sketch.py  run_llm_backends.py  run_local_law_certificate.py  run_manifesto_bundle.py  run_manifesto_end_to_end.py  run_manifesto_finetune_views.py  run_manifesto_replications.py  run_manifesto_reward_mechanisms.py  run_neural_operator_lda.py  run_neural_operator_lda_leaf_grid.py  run_neural_operator_markov_compare.py  run_neural_operator_markov_leaf_grid.py  run_preference_optimizer_views.py  run_tree_visualization.py
examples/methods/example_setup/: __init__.py  common.py  configs.py  manifesto.py  synthetic.py  toy_records.py
examples/research/: lda_embedding_spectral.yaml
examples/research/bench/: classical_sketches.yaml  hll_merge_learning.yaml
examples/research/methods/: README.md  run_fno_family.py  run_hll_sketch.py  run_lda_oracle.py  run_lda_recovery.py  run_manifesto_fg_compile.py  run_markov_oracle.py  run_markov_probe.py
examples/research/runtime/: longbench_v2_tiny.yaml  runtime_all_methods.yaml  runtime_embedding_retrieval.yaml  runtime_fno_state_model.yaml  runtime_llm_full_context.yaml  runtime_summary_tree.yaml
scripts/: probe_clean_unified_no.py  run_lda_tree_recovery_simulation.py  run_publication_validation.py  start_engine.py  start_sglang.sh  start_vllm.sh
scripts/research/: distill_ctreepo_students.py  probe_clean_unified_no.py  run_manifesto_fg_real_training_grid.py
src/treepo/: __init__.py  _optional.py  artifacts.py  audit.py  bundles.py  certificate.py  cli.py  common.py  distilled.py  evidence.py  finetune.py  hll.py  honesty.py  identification.py  learning.py  local_law.py  manifest.py  objective.py  paths.py  release.py  sampling.py  schedule.py  state.py  statistic.py  tree.py  viz.py
src/treepo/_research/: __init__.py  harness.py
src/treepo/bench/: __init__.py  cli.py  env.py  (+9 more)
tests/: conftest.py  test_bundles.py  test_engine_parity.py  test_examples.py  test_finetune_views.py  test_hll_api.py  test_identification.py  test_law_kind_aliases.py  test_llm_clients.py  test_node_audit.py  test_package_layers.py  test_release_gates.py  test_schedule.py  test_unified_contracts.py  test_viz.py
tests/bench/: test_cardinality_runner_smoke.py  test_hll_induced_projection.py  test_identifiable_zero_signatures.py  test_lda_not_public.py  test_learned_g_experiments.py  test_learned_g_runner_smoke.py  test_markov_runner.py  test_research_lda_not_public.py  test_segment_lda_ops_weight_recovery.py  test_segmented_lda_ctreepo.py
tests/cld/: conftest.py  test_canonical_defaults_drift.py  test_error_estimation.py  test_fit_manifest_and_objective.py  test_fit_phase1.py  test_fit_phase2_registry.py  test_fit_phase3_sketches.py  test_fit_real_hll.py  test_fit_real_lda.py  test_fixture_cache.py  test_grid_run.py  test_llm_startup_and_batching.py  test_local_law_audit.py  test_manifesto_paper_parity.py  test_methods_centralized.py  test_tree_preallocation.py
tests/methods/: conftest.py  test_canonical_defaults_drift.py  test_distilled_lane.py  test_error_estimation.py  test_examples_smoke.py  test_family_surface.py  test_fit_manifest_and_objective.py  test_fit_phase1.py  test_fit_phase2_registry.py  test_fit_phase3_sketches.py  test_fit_real_hll.py  test_fit_real_lda.py  test_fixture_cache.py  test_fixture_records.py  test_fno_family.py  test_g_estimators.py  test_grid_axes.py  test_grid_run.py  test_law_surfaces.py  test_lda_family.py  test_lda_fixture.py  test_learnable_family.py  test_llm_startup_and_batching.py  test_local_law_audit.py  test_manifesto_paper_parity.py  test_manifesto_project_full_integration.py  test_manifesto_rile_normalization.py  test_methods_centralized.py  test_node_supervision.py  test_objective_execution.py  test_qsentence_leaf_seam.py  test_results_json.py  test_rile_leaf_root_regime.py  test_text_generic_data_contract.py  test_tradeoff.py  test_tree_preallocation.py  test_tree_topology.py  test_trl_family.py  test_warmstart.py
tests/reports/: test_cardinality_report_smoke.py  test_report_scan_smoke.py
tests/sketches/: test_broad_classical_sketches.py  test_sketch_adapter_contracts.py
tests/suites/: test_suite_grids.py
tests/training/: test_local_law.py
(+728 files in other folders)
