[build-system]
# 77.0 added PEP 639 SPDX license-expression support (string form for `license`).
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "treepo"
version = "0.1.0"
description = "TreePO/C-TreePO core methods, local-law certificates, and research harness"
readme = "README.md"
# LicenseRef- prefix (PEP 639) for custom non-SPDX licenses like PolyForm-NC.
license = "LicenseRef-PolyForm-Noncommercial-2.0.0-pre.2"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{name = "Mitchell Linegar"}]
keywords = ["treepo", "ctreepo", "local-law"]
classifiers = [
  # License classifier removed per PEP 639 — license expression above
  # (LicenseRef-PolyForm-Noncommercial-2.0.0-pre.2) is the canonical signal.
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
bench = [
  "pyyaml>=6.0",
]
reports = [
  "matplotlib>=3.8.0",
  "pandas>=2.0.0",
]
sketches = [
  "datasketches>=5.2.0",
]
sklearn = [
  "scikit-learn>=1.4.2",
]
torch = [
  "torch>=2.0.0",
  "neuraloperator>=2.0.0",
]
llm = [
  "langextract>=1.1.1",
  "tiktoken>=0.12.0",
  "openai>=1.0.0",
  "dspy>=3.0.0",
]
runtime = [
  "pyyaml>=6.0",
  "langextract>=1.1.1",
  "tiktoken>=0.12.0",
  "openai>=1.0.0",
  "datasets>=2.14.0",
]
research = [
  "pyyaml>=6.0",
  "langextract>=1.1.1",
  "tiktoken>=0.12.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.4.2",
]
train = [
  "torch>=2.0.0",
  "neuraloperator>=2.0.0",
  "langextract>=1.1.1",
  "tiktoken>=0.12.0",
  "openai>=1.0.0",
  "dspy>=3.0.0",
  "transformers>=4.40.0",
  "datasets>=2.14.0",
  "peft>=0.8.0",
  "trl>=0.8.0",
  "scikit-learn>=1.4.2",
]
dev = [
  "pytest>=7.0.0",
  "pypdf>=4.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
]
all = [
  "pyyaml>=6.0",
  "langextract>=1.1.1",
  "tiktoken>=0.12.0",
  "matplotlib>=3.8.0",
  "pandas>=2.0.0",
  "datasketches>=5.2.0",
  "scikit-learn>=1.4.2",
  "torch>=2.0.0",
  "neuraloperator>=2.0.0",
  "openai>=1.0.0",
  "dspy>=3.0.0",
  "transformers>=4.40.0",
  "datasets>=2.14.0",
  "peft>=0.8.0",
  "trl>=0.8.0",
]

[dependency-groups]
# Dev-only deps (PEP 735). Auto-installed by `uv sync`; skip with
# `uv sync --no-dev` for the slim runtime surface. Optional extras above
# are installed with `uv sync --extra NAME` for workflow-specific stacks.
dev = [
  # Test + lint + type tooling
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  # Research-tier deps directly imported by treepo._research / treepo.methods /
  # the test suite. Several lightweight packages (more-itertools, tqdm)
  # arrive transitively via transformers / datasets / dspy — they don't
  # need to be listed here. If you run into a missing-import error, add it.
  "pyyaml>=6.0",
  "langextract>=1.1.1",
  "tiktoken>=0.12.0",
  "scikit-learn>=1.4.2",
  "torch>=2.0.0",
  "transformers>=4.40.0",
  "dspy>=3.0.0",
  "datasets>=2.14.0",
  "peft>=0.8.0",
  "trl>=0.8.0",
  "matplotlib>=3.8.0",
  "datasketches>=5.2.0",
  "pandas>=2.0.0",
  "openai>=1.0.0",
]

[project.scripts]
treepo-bench = "treepo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["treepo*"]

# uv-specific tooling config
[tool.uv]
# Allow editable installs into the venv (default true; explicit for clarity).
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
